[gd_scene load_steps=8 format=3 uid="uid://bjk32f1avr400"]

[ext_resource type="Script" path="res://scenes/test_scene/test_screen/test_screen.gd" id="1_au1b5"]
[ext_resource type="Script" path="res://scenes/test_scene/scripts/camera_controller.gd" id="2_arboi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ne7ci"]
bg_color = Color(0.913725, 0.913725, 0.913725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_315wx"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5ajm"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7p82"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2
border_color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cyc1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="TestScreen" type="Node2D"]
script = ExtResource("1_au1b5")

[node name="CameraController" type="Node2D" parent="."]
script = ExtResource("2_arboi")

[node name="TestPanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 0)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ne7ci")

[node name="TestMarginContainer" type="MarginContainer" parent="TestPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="QuestionsContainer" type="VBoxContainer" parent="TestPanelContainer/TestMarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="PanelContainer" type="PanelContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_315wx")

[node name="QuestionMarginContainer" type="MarginContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer/QuestionMarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer/QuestionMarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.913725, 0.913725, 1)
text = "Question 1
"

[node name="RichTextLabel" type="RichTextLabel" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer/QuestionMarginContainer/VBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "[u]dfgdxcvxbxbxbvxbvxbvbbcvbcvbvcbcbcbcbcvbcbcbcbcbcbcvbcvbcbcbcbcvbcvbcvbcvbcvbcvbcbcbcvbcbcvbcvbcbcvbcbbcvbcvbcvbcvbbsdfxfsdgsgsfgsfsdfsdfgsdfsdfsdfsdfsdfsdfsdfsdgsfgsdfsdfsdgfsgfsfdsfsdfsfgfsgsdfgsfvcxvxcbvsdfgsxdfssxsdfgsdgsgdsdgsdgsgxcbvsdfsfsgxcvxdfsdgfsgsdgxcvsdfxgxcvdsfxcvfdgsfxcvsdfgxcvsdfgxcvsdfgxgiicgscvxdfgxiiiiiifgxcgdsg[/u]."
fit_content = true

[node name="PanelContainer3" type="PanelContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d5ajm")

[node name="MarginContainer" type="MarginContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Question 3"

[node name="HFlowContainer" type="HFlowContainer" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1

[node name="RichTextLabel" type="RichTextLabel" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_e7p82")
text = "asdkma zxcmaksfm zxc malm zvm zamlf amvcx."
fit_content = true
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="TestPanelContainer/TestMarginContainer/QuestionsContainer/PanelContainer3/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_5cyc1")
text = " asdas zxczxvas s xzsas."
fit_content = true
autowrap_mode = 0
